<resources>
    <string name="app_name">eChirinos v4</string>
    <string name="title_activity_dptos">Departamentos</string>
    <string name="title_activity_incs">Incidencias</string>

    <!--Navigation Drawer-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eChirinos v4</string>
    <string name="nav_header_subtitle">FireBase</string>
    <string name="iv_nav_header_contentDescription">Imagen Logo</string>

    <!--Menus-->

    <string name="menu_Login">Login</string>
    <string name="menu_Dptos">Departamentos</string>
    <string name="menu_Incs">Incidencias</string>
    <string name="menu_Preferencias">Preferencias</string>
    <string name="menu_Salir">Salir</string>
    <string name="menu_MapaIncs">Mapa Incs</string>
    <string name="menu_FiltroIncs">Filtro Incs</string>
    <string name="menu_FotoIncs">Foto Incs</string>
    <string name="menu_LocationIncs">Location Incs</string>

    <!--Mensajes-->

    <string name="msg_DlgConfirmacion_Salir">¿Desea cerrar la App?</string>
    <string name="msg_DlgConfirmacion_Eliminar">Se va a eliminar el elemento seleccionado. ¿Está seguro?</string>
    <string name="msg_DlgImagen_Incidencia">Imagen de Incidencia</string>

    <string name="msg_LoginOK">Login correcto.</string>
    <string name="msg_LoginKO">Login incorrecto!!</string>
    <string name="msg_NoLogin">No Login!!</string>
    <string name="msg_LoginPermisos">No tienes permisos!!</string>
    <string name="msg_CambioBD">Debe reiniciar la App!!</string>

    <string name="msg_FaltanDatosObligatorios">Faltan datos obligatorios!!</string>
    <string name="msg_AltaDepartamentoOK">Alta de departamento correcta.</string>
    <string name="msg_AltaDepartamentoKO">Alta de departamento incorrecta!!</string>
    <string name="msg_EditarDepartamentoOK">Edición de departamento correcta.</string>
    <string name="msg_EditarDepartamentoKO">Edición de departamento incorrecta!!</string>
    <string name="msg_BajaDepartamentoOK">Baja de departamento correcta.</string>
    <string name="msg_BajaDepartamentoKO">Baja de departamento incorrecta!!</string>
    <string name="msg_AltaIncidenciaOK">Alta de incidencia correcta.</string>
    <string name="msg_AltaIncidenciaKO">Alta de incidencia incorrecta!!</string>
    <string name="msg_EditarIncidenciaOK">Edición de incidencia correcta.</string>
    <string name="msg_EditarIncidenciaKO">Edición de incidencia incorrecta!!</string>
    <string name="msg_BajaIncidenciaOK">Baja de incidencia correcta.</string>
    <string name="msg_BajaIncidenciaKO">Baja de incidencia incorrecta!!</string>

    <string name="msg_DatosRecuperadosOK">Datos recuperados correctamente.</string>
    <string name="msg_DatosGuardadosOK">Datos guardados correctamente.</string>
    <string name="msg_ErrorBaseDatos">Error en base de datos!!</string>
    <string name="msg_AbrirConexionOK">Conexión BD abierta correctamente.</string>
    <string name="msg_CerrarConexionOK">Conexión BD cerrada correctamente.</string>
    <string name="msg_ErrorAbrirConexion">Error abriendo conexión BD!!</string>
    <string name="msg_ErrorCerrarConexion">Error cerrando conexión BD!!</string>

    <string name="msg_Dpto_Id">ID: %1$02d</string>
    <string name="msg_Dpto_Nombre">\tNombre: %1$s</string>

    <string name="msg_Inc_DptoIdFecha">DPTO: %1$02d ID: %2$10s FECHA: %3$10s</string>
    <string name="msg_Inc_TipoEstado">TIPO: %1$3s ESTADO: %2$10s</string>
    <string name="msg_Inc_Descripcion">Descripción: %1$s</string>

    <string name="msg_Loc_LatLong">Lat.: %1$.2f Long.: %2$.2f</string>
    <string name="msg_ErrorPermisosLoc">Permisos de Localización necesarios!!</string>
    <string name="msg_ErrorSettingsLoc">Settings de Localización no válidos!!</string>

    <string name="msg_ErrorCamara1">No Activity!!</string>
    <string name="msg_ErrorCamara2">No Feature!!</string>
    <string name="msg_ErrorCamara3">No Data!!</string>
    <string name="msg_Chooser">¿Escoge una app?</string>

    <string name="msg_ErrorAuthentication6Char">Error!! Contraseña debe ser igual o superior a 6 caracteres</string>

    <!--Widgets-->

    <string name="tv_Login_Cabecera">LOGIN</string>
    <string name="tv_Login">No Login</string>
    <string name="tv_Login_Dptos">Dptos:</string>
    <string name="tv_Login_Clave">Clave:</string>

    <string name="tv_Dpto_Cabecera_Editar">EDITAR DEPARTAMENTO</string>
    <string name="tv_Dpto_Cabecera_Crear">CREAR DEPARTAMENTO</string>

    <string name="bt_Dpto_Eliminar">Eliminar</string>
    <string name="bt_Dpto_Editar">Editar</string>
    <string name="bt_Dpto_Crear">Crear</string>

    <string name="tv_Dpto_Id">Id:</string>
    <string name="tv_Dpto_Nombre">Nombre:</string>
    <string name="tv_Dpto_Clave">Clave:</string>
    <string name="iv_Dpto_contentDescription">Imagen Dpto</string>

    <string name="tv_Inc_Cabecera_Editar">EDITAR INCIDENCIA</string>
    <string name="tv_Inc_Cabecera_Crear">CREAR INCIDENCIA</string>

    <string name="bt_Inc_Eliminar">Eliminar</string>
    <string name="bt_Inc_Editar">Editar</string>
    <string name="bt_Inc_Crear">Crear</string>

    <string name="tv_Inc_Dpto">Dpto:</string>
    <string name="tv_Inc_Id">Id:</string>
    <string name="tv_Inc_Fecha">Fecha:</string>
    <string name="tv_Inc_Descripcion">Descripción:</string>
    <string name="tv_Inc_Tipo">Tipo:</string>
    <string name="rb_Inc_TipoRMI">RMI</string>
    <string name="rb_Inc_TipoRMA">RMA</string>
    <string name="tv_Inc_Estado">Estado:</string>
    <string name="tv_Inc_Resolucion">Resolución:</string>
    <string name="iv_Inc_contentDescription">Imagen Inc</string>
    <string name="tv_Inc_Latitud">Latitud:</string>
    <string name="tv_Inc_Longitud">Longitud:</string>

    <string name="tv_Filtro_Cabecera">FILTRO</string>
    <string name="tv_Filtro_Dptos">Dptos:</string>
    <string name="tv_Filtro_Estado">Estado:</string>
    <string name="rb_Filtro_Estado_Todas">Todas</string>
    <string name="rb_Filtro_Estado_Resueltas">Resueltas</string>
    <string name="rb_Filtro_Estado_NoResueltas">No Resueltas</string>
    <string name="tv_Filtro_Fecha">Fecha:</string>
    <string name="bt_Filtro_Fecha">&#8230;</string>

    <string name="iv_dlgImagen_contentDescription">Imagen Inc</string>

    <!--Widgets genéricos-->

    <string name="bt_OK">OK</string>
    <string name="bt_KO">KO</string>
    <string name="bt_SI">Si</string>
    <string name="bt_NO">No</string>
    <string name="bt_Aceptar">Aceptar</string>
    <string name="bt_Cancelar">Cancelar</string>
    <string name="bt_Salir">Salir</string>

    <!--Preferencias-->

    <string name="category_Almacenamiento">Almacenamiento</string>
    <string name="category_LocMapas">Localización y Mapas</string>
    <string name="category_Interfaz">Interfaz</string>

    <string name="Firebase_name_key">Firebase_name</string>
    <string name="Firebase_name_title">Firebase Nombre</string>
    <string name="Firebase_name_summary">Nombre raíz en Firebase</string>
    <string name="Firebase_name_default">eChirinosv4</string>

    <string name="Loc_interval_key">Loc_interval_key</string>
    <string name="Loc_interval_title">Intervalo</string>
    <string name="Loc_interval_summary">Intervalo entre lecturas de localización (segundos)</string>
    <string name="Loc_interval_default">20</string>
    <string name="Loc_desplazamiento_key">Loc_desplazamiento_key</string>
    <string name="Loc_desplazamiento_title">Desplazamiento</string>
    <string name="Loc_desplazamiento_summary">Mínimo desplazamiento para activar localización (metros)</string>
    <string name="Loc_desplazamiento_default">2</string>
    <string name="Map_tipo_key">Map_tipo_key</string>
    <string name="Map_tipo_title">Tipo de Mapa</string>
    <string name="Map_tipo_summary">Selección del tipo de mapa a mostrar</string>
    <string name="Map_tipo_default">Normal</string>

    <string name="login_key">login</string>
    <string name="login_title">Mostrar Login</string>
    <string name="login_summary">Muestra el Login al inicio</string>
    <string name="login_default">true</string>

    <string name="splashApp_key">splashApp</string>
    <string name="splashApp_title">Duración Splash (3sg)</string>
    <string name="splashApp_summary">Establece a 3 sg la duración del Splash</string>
    <string name="splashApp_default">false</string>

    <string name="bNav_key">BottomNav</string>
    <string name="bNav_title">Mostrar BottomNav</string>
    <string name="bNav_summary">Muestra un Bottom Navigation con opciones</string>
    <string name="bNav_default">false</string>

    <string-array name="array_TipoMapa">
        <item>Normal</item>
        <item>Híbrido</item>
        <item>Satélite</item>
        <item>Tierra</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
